--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "next": "9.4.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.4",
     "@types/react": "^16.9.35",
+    "@types/styled-components": "^5.1.0",
     "typescript": "^3.9.3"
   }
 }
