--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "next": "9.4.2",
+    "node-fetch": "^2.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.4",
+    "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.35",
     "@types/styled-components": "^5.1.0",
     "typescript": "^3.9.3"
