--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "a11y-react-emoji": "^1.1.2",
     "next": "9.4.2",
     "node-fetch": "^2.6.0",
     "react": "16.13.1",
