--- a/model/cloudbuild.yaml
+++ b/model/cloudbuild.yaml
@@ -7,6 +7,6 @@ steps:
   args: ['push', 'gcr.io/transformers-277916/gpt2']
 # Deploy container image to Cloud Run
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['run', 'deploy', 'writer', '--image', 'gcr.io/transformers-277916/gpt2', '--region', 'us-central1', '--platform', 'managed', '--allow-unauthenticated']
+  args: ['run', 'deploy', 'gpt2', '--image', 'gcr.io/transformers-277916/gpt2', '--region', 'us-central1', '--platform', 'managed', '--allow-unauthenticated']
 images:
 - gcr.io/transformers-277916/gpt2
