--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
-  "name": "transformers",
-  "version": "0.1.0",
-  "private": true,
+  "name": "svelte-app",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "a11y-react-emoji": "^1.1.2",
-    "next": "9.4.2",
-    "node-fetch": "^2.6.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "styled-components": "^5.1.0"
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public"
   },
   "devDependencies": {
-    "@types/node": "^14.0.4",
-    "@types/node-fetch": "^2.5.7",
-    "@types/react": "^16.9.35",
-    "@types/styled-components": "^5.1.0",
-    "typescript": "^3.9.3"
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
+    "rollup": "^2.3.4",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^5.1.2",
+    "svelte": "^3.0.0"
+  },
+  "dependencies": {
+    "@js-random/string": "^0.3.5",
+    "sirv-cli": "^0.4.4"
   }
 }
